k8s/auth-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app-service
spec:
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
  labels:
    app: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
      - name: auth-app
        image: tavopragma/auth-service:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
