k8s/notification-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-db-service
spec:
  selector:
    app: notification-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-db
  labels:
    app: notification-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-db
  template:
    metadata:
      labels:
        app: notification-db
    spec:
      containers:
      - name: notification-db
        image: mongo
        ports:
        - containerPort: 27017
