k8s/rabbit-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-app-service
spec:
  selector:
    app: rabbit-app
  type: NodePort
  ports:
    - name: app
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: manager
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 30001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-app
  labels:
    app: rabbit-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-app
  template:
    metadata:
      labels:
        app: rabbit-app
    spec:
      containers:
      - name: rabbit-app
        image: rabbitmq:3.13.1-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
