k8s/ticket-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-app-service
spec:
  selector:
    app: ticket-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-app
  labels:
    app: ticket-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-app
  template:
    metadata:
      labels:
        app: ticket-app
    spec:
      containers:
      - name: ticket-app
        image: tavopragma/ticket-service:1.0.0
        ports:
        - containerPort: 8080
