k8s/zipkin-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-app-service
spec:
  selector:
    app: zipkin-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
      nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-app
  labels:
    app: zipkin-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin-app
  template:
    metadata:
      labels:
        app: zipkin-app
    spec:
      containers:
      - name: zipkin-app
        image: openzipkin/zipkin
        ports:
        - containerPort: 9411
