k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/v1/auth/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: middleware-app-service
            port:
              number: 8080
      - path: /api/v1/categories*
        pathType: ImplementationSpecific
        backend:
          service:
            name: tournament-app-service
            port:
              number: 8080
      - path: /api/v1/streamings*
        pathType: ImplementationSpecific
        backend:
          service:
            name: tournament-app-service
            port:
              number: 8080
      - path: /api/v1/videogames*
        pathType: ImplementationSpecific
        backend:
          service:
            name: tournament-app-service
            port:
              number: 8080
      - path: /api/v1/tournaments*
        pathType: ImplementationSpecific
        backend:
          service:
            name: tournament-app-service
            port:
              number: 8080
      - path: /api/v1/participant-tickets*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ticket-app-service
            port:
              number: 8080
      - path: /api/v1/clients*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ticket-app-service
            port:
              number: 8080
      - path: /api/v1/spectator-tickets*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ticket-app-service
            port:
              number: 8080
      - path: /api/v1/notifications*
        pathType: ImplementationSpecific
        backend:
          service:
            name: notification-app-service
            port:
              number: 8080
